--- a/gallery.html
+++ b/gallery.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fotografía de la Naturaleza</title>
+    <title>Galería de Fotografía de la Naturaleza</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header>
-        <h1>Fotografía de la Naturaleza</h1>
+        <h1>Galería</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
@@ -20,12 +20,15 @@
         </nav>
     </header>
 
-    <main>
-        <section class="intro">
-            <h2>Explora la Belleza de la Naturaleza</h2>
-            <p>Descubre los secretos para capturar los paisajes más impresionantes y la vida silvestre en su hábitat
-                natural.</p>
-        </section>
+    <main class="gallery">
+        <figure>
+            <img src="C:\Users\USUARIO\Pictures\Saved Pictures\paisaje1.jpg" alt="Paisaje Montañoso">
+            <figcaption>Paisaje Montañoso</figcaption>
+        </figure>
+        <figure>
+            <img src="C:\Users\USUARIO\Pictures\Saved Pictures\fauna1.jpg" alt="Águila en Vuelo">
+            <figcaption>Águila en Vuelo</figcaption>
+        </figure>
     </main>
 
     <footer>
