--- a/tips.html
+++ b/tips.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fotografía de la Naturaleza</title>
+    <title>Consejos para Fotografía de la Naturaleza</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header>
-        <h1>Fotografía de la Naturaleza</h1>
+        <h1>Consejos de Fotografía</h1>
         <nav>
             <ul>
                 <li><a href="index.html">Inicio</a></li>
@@ -21,10 +21,13 @@
     </header>
 
     <main>
-        <section class="intro">
-            <h2>Explora la Belleza de la Naturaleza</h2>
-            <p>Descubre los secretos para capturar los paisajes más impresionantes y la vida silvestre en su hábitat
-                natural.</p>
+        <section class="tips">
+            <h2>Fotografiando Paisajes</h2>
+            <p>Utiliza la luz natural a tu favor y encuadra tus fotos cuidadosamente para capturar la belleza del
+                entorno.</p>
+
+            <h2>Fotografiando Vida Silvestre</h2>
+            <p>Mantén la distancia y sé paciente. Usa un teleobjetivo para acercarte sin molestar a los animales.</p>
         </section>
     </main>
 
